# v6e

./: .pre-commit-config.yaml  PLANNED_WORK.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
examples/: validations.py
pyright_tests/: test_types.py
tests/: test_calendar.py  test_messages.py  test_numeric.py  test_repr.py  test_str.py  util.py
tests/types/: test_list.py  test_str.py
v6e/: __init__.py  second.py  second_init.py
v6e/types/: base.py  boolean.py  calendar.py  comparable.py  decorators.py  dict.py  list.py  numbers.py  sequences.py  string.py  struct.py  utils.py
